<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
     >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/edit_form_fragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_form"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/userNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headingTop"
            android:text="@string/user_name_text_view"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/editTop"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/custom_edit"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "
            android:drawableStart="@drawable/user"
            android:drawablePadding="@dimen/padding"
            android:elevation="@dimen/elevation"
            android:paddingStart="@dimen/paddingStart"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/userNameTV" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/email_text_view"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/userNameET" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/editTop"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/email"
            android:drawablePadding="@dimen/padding"
            android:elevation="@dimen/elevation"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/paddingStart"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/editTop"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="@dimen/padding"
            android:elevation="@dimen/elevation"
            android:inputType="number"
            android:maxLength="10"
            android:paddingStart="@dimen/paddingStart"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/pinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/pin_code"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />

        <EditText
            android:id="@+id/pinCodeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/editTop"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/pincode"
            android:drawablePadding="@dimen/padding"
            android:elevation="@dimen/elevation"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="@dimen/paddingStart"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/pinCode" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/address"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/pinCodeET" />

        <EditText
            android:id="@+id/addressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:layout_marginTop="@dimen/editTop"
            android:layout_marginRight="@dimen/right"
            android:background="@drawable/custom_edit"
            android:drawableStart="@drawable/address"
            android:drawablePadding="@dimen/padding"
            android:elevation="@dimen/elevation"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/paddingStart"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btnTop"
            android:text="@string/validate"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/addressET" />








        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>