<resources>
    <string name="app_name">USER INFO</string>
    <string name="details_form">Employee Details Form</string>
    <string name="user_name_text_view">User Name</string>
    <string name="email_text_view">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="eachFieldToast">Every field is mandatory</string>
    <string name="emailToast">Email should have @ and .com or co.in</string>
    <string name="phoneNumberToast">Phone number ( should be only length of 10)</string>
    <string name="pinCodeToast">Pin code ( should be only length of 6)</string>
    <string name="pin_code">Pin Code</string>
    <string name="address">Address</string>
    <string name="validate">Validate</string>
    <string name="confirmData">Confirm</string>
    <string name="cancelData">Cancel</string>
    <string name="details">Employee Details</string>
    <string name="userData"> Hi %1s,How are you? Are you staying at %2s %3s. I am not able to contact you on %4s. Can I email you the details at  %5s
</string>
</resources>